src/objects/Funder_Portfolio__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Funded__c</fullName>
        <label>Amount Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Utilized__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Utilized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Funder Portfolios</relationshipLabel>
        <relationshipName>Funder_Portfolios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <referenceTo>Center__c</referenceTo>
        <relationshipLabel>Funder Portfolios</relationshipLabel>
        <relationshipName>Funder_Portfolios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <label>Funder</label>
        <referenceTo>Funder__c</referenceTo>
        <relationshipLabel>Funder Portfolio</relationshipLabel>
        <relationshipName>Funder_Portfolios</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Funder Portfolio</label>
    <nameField>
        <label>Funder Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funder Portfolios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>